# clawithme

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  STATE.md  TODO.md  bakeyzhang.html  config.example.toml  docker-compose.yml  karpathy_en.html  oadank_data.json  oadank_final.html  oadank_v4.html  oadank_v5.html  oadank_v6.html  oadank_v7.html  oadank_v8.html  oadank_v9.html  pyproject.toml  vercel.json  webui.sh
.github/workflows/: ci.yml  daily-verify.yml  pages.yml  release.yml
clawithme/: __init__.py  cache.py  cli.py  config.py  linkedin_auth.py  logging.py  pipeline.py  watch.py
clawithme/crawler/: __init__.py  base.py  client.py  registry.py  utils.py
clawithme/crawler/extractors/: __init__.py  baidu_zhidao.py  behance.py  bilibili.py  blogger.py  chess.py  cnblogs.py  codepen.py  coolapk.py  csdn.py  devto.py  discogs.py  discord.py  douban.py  douyin.py  dribbble.py  fiverr.py  flickr.py  gitee.py  github.py  gitlab.py  goodreads.py  hackernews.py  huaban.py  hupu.py  instagram.py  jianshu.py  juejin.py  keybase.py  leetcode.py  linkedin.py  medium.py  netease_music.py  nga.py  patreon.py  pinterest.py  producthunt.py  quora.py  reddit.py  segmentfault.py  (+18 more)
clawithme/engine/: __init__.py  engines.py  http_client.py  loader.py  proxy_manager.py
clawithme/leak_sources/: __init__.py  hibp.py  manager.py
clawithme/report/: __init__.py  generator.py  i18n.py  renderers.py  template.py
clawithme/signals/: __init__.py  avatar.py  correlation.py  extraction.py  llm_verifier.py  location.py  time.py  username.py
clawithme/sites/: __init__.py  data.json
clawithme/tui/: __init__.py  app.py
clawithme/tui/screens/: results.py  search.py
clawithme/web/: __init__.py  app.py  cli_web.py
clawithme/web/routes/: __init__.py  admin.py
clawithme/web/static/: admin.html  index.html
clawithme/web_1/routes/: admin.py  report.py
data/: default_avatars.json  engines.json  schema.json  taxonomy.json
data/sites/blog/: cnblogs.json  jianshu.json  lofter.json  medium.json  sspai.json
data/sites/devtools/: csdn.json  devto.json  gitee.json  github.json  gitlab.json  juejin.json  keybase.json  oschina.json  producthunt.json  segmentfault.json  stackoverflow.json
data/sites/ecommerce/: smzdm.json
data/sites/forum/: baidu_zhidao.json  coolapk.json  hackernews.json  hupu.json  nga.json  tianya.json  tieba.json  v2ex.json
data/sites/gaming/: steam.json
data/sites/media/: acfun.json  behance.json  bilibili.json  dribbble.json  flickr.json  huaban.json  pinterest.json  slideshare.json  twitch.json  youtube.json  zcool.json
data/sites/migrated/blog/: about_me.json  ameblo.json  blogger.json  club_cnews_ru.json  diary_ru.json  do100verno_info.json  dreamwidth.json  fediverse_party.json  habr.json  hive_blog.json  hubpages.json  hubski.json  imood.json  justmj_ru.json  kinja.json  livejournal.json  medium.json  noblogs.json  paragraph.json  soup.json  spaces.json  substack.json  telescope_ac.json  thelion.json  theodysseyonline.json  thoughts_com.json  tistory.json  travelblog.json  unknown.json  virgool.json  wls_social.json  wordpress.json  write_as.json
data/sites/migrated/devtools/: accounts_eclipse_org.json  adblockplus_org.json  alternativeto.json  appleinsider_ru.json  asciinema.json  askvoprosy.json  atcoder.json  bitbucket.json  cash_app.json  cashme.json  cloudflarecommunity.json  cnet.json  code_sandbox.json  code_snippet_wiki.json  codeberg_org.json  codecademy.json  codecanyon.json  codeforces_com.json  codementor.json  codepen.json  coder_social.json  coders_rank.json  coderwall.json  codewars.json  community_clearlinux_org.json  community_getpostman_com.json  community_sphero_com.json  cqham.json  crypto_hack.json  cssbattle.json  ctan.json  dev_by.json  dev_community.json  devrant.json  digitalocean.json  discourse_haskell_org.json  discuss_elastic_co.json  discuss_hashicorp_com.json  discusspython.json  djangoproject_co.json  (+99 more)
data/sites/migrated/forum/: 0-3_ru.json  101xp_com.json  1xforum.json  27r_ru.json  308-club_ru.json  3dcadforums.json  3glaz_org.json  4cheat.json  4gameforum.json  4x4_tomsk_ru.json  active_lviv_ua.json  actual-porn_org.json  affiliatefix.json  afterellen.json  akforum_ru.json  alabay.json  alexgyver.json  aliensoup_com.json  allgaz.json  alliedmods.json  allods.json  allthelyrics.json  amateurvoyeurforum_com.json  amazfitwatchfaces.json  amperka.json  amspb.json  anarcho-punk.json  androidforums.json  animebase.json  animeforum.json  animesuperhero.json  animeuknews.json  antichat.json  antique-bottles.json  antiquers.json  antiscam_space.json  antiwomen.json  appledeveloper.json  archeage.json  arcolinuxforum_com.json  (+682 more)
data/sites/migrated/gaming/: aetherhub.json  armorgames.json  boardgamegeek.json  gog.json  (+85 more)
data/sites/music/: netease_music.json  soundcloud.json  spotify.json
data/sites/social/: discord.json  douban.json  fiverr.json  instagram.json  linkedin.json  patreon.json  pinterest.json  quora.json  reddit.json  telegram.json  tiktok.json  tumblr.json  twitter.json  weibo.json  zhihu.json
docs/: STATE.md  async-pipeline-design.md  audit-claude-code.md  audit-report.md  discussion-log.md  index.html  lessons-learned.md  technical-roadmap.md  todo.md  v2-jury-cn-expert.md
docs/plans/: 2026-05-05-architecture-isolation.md
scripts/: benchmark_llm.py  extractor_health.py  healthcheck.py  migrate_maigret.py  stats.py  validate.py  verify_site.py
searxng/: settings.yml
searxng/templates/simple/: base.html  index.html  search.html
tests/: test_cache.py  test_cli.py  test_container_config.py  test_crawler_base.py  test_crawler_client.py  test_crawler_registry.py  test_discord_extractor.py  test_engines.py  test_extraction_pipeline.py  test_github_extractor.py  test_http_client.py  test_leak_sources.py  test_linkedin_playwright_cleanup.py  test_loader.py  test_pipeline.py  test_report.py  test_signals_avatar.py  test_signals_correlation.py  test_signals_extraction.py  test_signals_llm_verifier.py  test_signals_location.py  test_signals_time.py  test_signals_username.py  test_web.py
(+2144 files in other folders)
