[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawithme"
version = "0.1.0"
description = "Open-source OSINT tool — username to identity panorama"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "9哥"}
]
keywords = ["osint", "username", "investigation", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "scrapling>=0.4",
    "imagehash>=4.3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
clawithme = "clawithme.cli:main"

[project.entry-points."clawithme.extractors"]
github = "clawithme.crawler.extractors.github:GithubExtractor"
v2ex = "clawithme.crawler.extractors.v2ex:V2exExtractor"
bilibili = "clawithme.crawler.extractors.bilibili:BilibiliExtractor"
gitlab = "clawithme.crawler.extractors.gitlab:GitlabExtractor"
devto = "clawithme.crawler.extractors.devto:DevtoExtractor"
stackoverflow = "clawithme.crawler.extractors.stackoverflow:StackoverflowExtractor"

[tool.setuptools.packages.find]
include = ["clawithme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "PL"]
ignore = [
    "PLR2004",  # magic value comparisons (acceptable in tests)
    "B904",     # raise from in except (not critical)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004", "S", "F401"]
"scripts/*" = ["D", "S", "E501", "SIM", "PLC0415", "E402", "PLW0603"]
"clawithme/cli.py" = ["PLR0912", "PLR0915", "PLC0415"]
"clawithme/crawler/client.py" = ["PLC0415", "PLW0603", "E501"]
"clawithme/engine/engines.py" = ["PLC0415", "PLW0603"]
"clawithme/leak_sources/__init__.py" = ["PLC0415"]
"clawithme/logging.py" = ["PLC0415"]
"clawithme/report/generator.py" = ["E501"]  # CSS in template strings
