[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawithme"
version = "0.1.0"
description = "Open-source OSINT tool — username to identity panorama"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "9哥"}
]
keywords = ["osint", "username", "investigation", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "scrapling>=0.4",
    "imagehash>=4.3",
    "Pillow>=10.0",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
]

[project.scripts]
clawithme = "clawithme.cli:main"

[project.entry-points."clawithme.extractors"]
github = "clawithme.crawler.extractors.github:GithubExtractor"
v2ex = "clawithme.crawler.extractors.v2ex:V2exExtractor"
bilibili = "clawithme.crawler.extractors.bilibili:BilibiliExtractor"
gitlab = "clawithme.crawler.extractors.gitlab:GitlabExtractor"
devto = "clawithme.crawler.extractors.devto:DevtoExtractor"
douban = "clawithme.crawler.extractors.douban:DoubanExtractor"
stackoverflow = "clawithme.crawler.extractors.stackoverflow:StackoverflowExtractor"
tianyancha = "clawithme.crawler.extractors.tianyancha:TianyanchaExtractor"
keybase = "clawithme.crawler.extractors.keybase:KeybaseExtractor"
segmentfault = "clawithme.crawler.extractors.segmentfault:SegmentfaultExtractor"
behance = "clawithme.crawler.extractors.behance:BehanceExtractor"
baidu_zhidao = "clawithme.crawler.extractors.baidu_zhidao:BaiduZhidaoExtractor"
dribbble = "clawithme.crawler.extractors.dribbble:DribbbleExtractor"
flickr = "clawithme.crawler.extractors.flickr:FlickrExtractor"
patreon = "clawithme.crawler.extractors.patreon:PatreonExtractor"
csdn = "clawithme.crawler.extractors.csdn:CsdnExtractor"
cnblogs = "clawithme.crawler.extractors.cnblogs:CnblogsExtractor"
jianshu = "clawithme.crawler.extractors.jianshu:JianshuExtractor"
juejin = "clawithme.crawler.extractors.juejin:JuejinExtractor"
coolapk = "clawithme.crawler.extractors.coolapk:CoolapkExtractor"
hackernews = "clawithme.crawler.extractors.hackernews:HackernewsExtractor"
huaban = "clawithme.crawler.extractors.huaban:HuabanExtractor"
linkedin = "clawithme.crawler.extractors.linkedin:LinkedinExtractor"
medium = "clawithme.crawler.extractors.medium:MediumExtractor"
netease_music = "clawithme.crawler.extractors.netease_music:NeteaseMusicExtractor"
nga = "clawithme.crawler.extractors.nga:NgaExtractor"
producthunt = "clawithme.crawler.extractors.producthunt:ProducthuntExtractor"
quora = "clawithme.crawler.extractors.quora:QuoraExtractor"
reddit = "clawithme.crawler.extractors.reddit:RedditExtractor"
steam = "clawithme.crawler.extractors.steam:SteamExtractor"
telegram = "clawithme.crawler.extractors.telegram:TelegramExtractor"
youtube = "clawithme.crawler.extractors.youtube:YoutubeExtractor"
zcool = "clawithme.crawler.extractors.zcool:ZcoolExtractor"

[tool.setuptools.packages.find]
include = ["clawithme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "PL"]
ignore = [
    "PLR2004",  # magic value comparisons (acceptable in tests)
    "B904",     # raise from in except (not critical)
    "UP037",    # quoted type annotations (TYPE_CHECKING pattern, by policy)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004", "S", "F401"]
"scripts/*" = ["D", "S", "E501", "SIM", "PLC0415", "E402", "PLW0603"]
"clawithme/cli.py" = ["PLR0912", "PLR0913", "PLR0915", "PLC0415"]
"clawithme/pipeline.py" = ["PLR0913"]
"clawithme/crawler/client.py" = ["PLC0415", "PLW0603", "E501"]
"clawithme/engine/engines.py" = ["PLC0415", "PLW0603"]
"clawithme/leak_sources/__init__.py" = ["PLC0415"]
"clawithme/logging.py" = ["PLC0415"]
"clawithme/report/generator.py" = ["E501"]  # CSS in template strings
